<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SinglePlayerLauncher"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/single_player"
        android:gravity="center"
        android:id="@+id/single_player_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ff0064ff"
        android:textSize="@dimen/abc_text_size_display_3_material" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/single_player_go_button"
        android:layout_below="@+id/single_player_label"
        android:layout_marginTop="50dp"
        android:textColor="#ffffffff"
        android:background="#ff0000ff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignStart="@+id/highscore_button"
        android:layout_alignEnd="@+id/highscore_button" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:id="@+id/highscore_button"
        android:layout_below="@+id/single_player_go_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:textColor="#ffffffff"
        android:background="#ff0000ff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff282828"
        android:textColor="#ffffffff"
        android:text="@string/back"
        android:id="@+id/single_player_back_button"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/highscore_button"
        android:layout_alignStart="@+id/highscore_button"
        android:layout_alignEnd="@+id/highscore_button"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
