<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".HighscoreActivity"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/highscores"
        android:id="@+id/highscore_label"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ff0064ff"
        android:textSize="@dimen/abc_text_size_display_3_material" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscore_label"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/highscore_linearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="1"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingStart="25dp"
            android:paddingEnd="0dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:layout_weight="1"
            android:textColor="#ffffffff"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="end" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscore_linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/highscore_tableLayout" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:id="@+id/highscore_ok_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textColor="#ffffffff"
        android:background="#ff0000ff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
