<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/app_name_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ff0064ff"
        android:textSize="@dimen/abc_text_size_display_3_material" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/single_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player_mode"
        android:textColor="#ffffffff"
        android:background="#ff0000ff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="10dp"
        android:layout_below="@+id/app_name_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/multiplayer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"
        android:textColor="#ffffffff"
        android:background="#ff0000ff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/single_player_button"
        android:layout_marginTop="25dp"
        android:layout_alignEnd="@+id/single_player_button"
        android:layout_alignStart="@+id/single_player_button" />

</RelativeLayout>