<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".GameOverActivity"
    android:background="#ff000000"
    android:id="@+id/game_over_relativeLayout" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_over"
        android:id="@+id/game_over_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ff0064ff"
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_display_3_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/game_over_score_text"
        android:layout_below="@+id/game_over_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#00ffff"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_over_score_label"
        android:layout_below="@+id/game_over_score_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="#00ffff"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:gravity="center"
        android:paddingBottom="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_name"
        android:layout_below="@+id/game_over_score_label"
        android:gravity="center"
        android:textColor="#ffffffff"
        android:id="@+id/game_over_enter_name"
        android:layout_centerHorizontal="true"
        android:labelFor="@+id/game_over_editText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/game_over_editText"
        android:layout_below="@+id/game_over_enter_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:inputType="textPersonName"
        android:background="#ff282828"
        android:maxLength="50"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="#ff0082ff"
        android:gravity="center"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
        android:singleLine="true" >
    </EditText>

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textColor="#ffffffff"
        android:background="#ff0000ff"
        android:id="@+id/game_over_continue_button"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
